# Machining_Formulas

./: .gitignore  AGENTS.md  CLAUDE.md  EngineeringCalculator.py  README.md  V3_GUI_TESTING_PLAN.md  V3_GUI_TESTING_RESULTS.md  V3_RELEASE_SUMMARY.md  analyze_v3_gui_forms.py  context_builder.py  debug_v3_gui.py  engineering_calculator.py  execute_mode.py  formuler.py  from formuler import calculate_mass.py  gui.py  horz_gui.py  listbox.py  llmcoder.md  material_utils.py  note.md  ollama_utils.py  ollama_utils_v2.py  pyproject.toml  quick_visibility_test.py  requirements.txt  requirements_v2.txt  run_v2.bat  run_v2.sh  test_frame_visibility.py  test_inject_validation.py  test_v3_complete.py  test_v3_connectivity.py  test_v3_enhanced.py  test_v3_final.py  test_v3_gui_comprehensive.py  test_v3_gui_fix.py  test_v3_gui_quick_diagnostic.py  tooltips.json  tooltips.txt  (+9 more)
.github/: copilot-instructions.md
T150/: ana.py  (+1 more)
project/: .flake8  pyproject.toml  requirements.txt  setup.cfg
project/src/machining_formulas/: __init__.py  __main__.py
project/src/machining_formulas/core/: __init__.py  engineering_calculator.py
project/src/machining_formulas/gui/: __init__.py  advanced_calculator.py  execute_mode.py  v3_gui.py
project/src/machining_formulas/llm/: __init__.py  material_utils.py
project/src/machining_formulas/workspace/: workspace_editor.py
project/tests/: conftest.py  test_engineering_calculator.py  test_execute_mode.py  test_handle_tool_calls.py  test_ollama_utils.py  test_ollama_utils_v2.py  test_tool_definitions.py
project/tests_v3/: test_workspace_buffer.py
(+47 files in other folders)
