[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machining-formulas"
version = "0.1.0"
description = "Machining and material mass calculation utilities with Tkinter GUI and Ollama tool-calling integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
